--- a/meal_planner_recommender/Cargo.toml
+++ b/meal_planner_recommender/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "meal-planner-responder"
+name = "meal_planner_recommender"
 edition.workspace = true
 version.workspace = true
 authors.workspace = true
@@ -8,14 +8,15 @@ authors.workspace = true
 common = "*"
 
 anyhow = { workspace = true }
-cooklang = { workspace = true }
-include_dir = { workspace = true }
-lambda_http = { workspace = true }
+aws-config = { workspace = true }
+aws-sdk-s3 = { workspace = true }
+aws-sdk-ses = { workspace = true }
+aws_lambda_events = { workspace = true }
 lambda_runtime = { workspace = true }
-reqwest = { workspace = true }
-openssl = { version = "0.10.35", features = ["vendored"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+rand = { workspace = true }
+tera = { workspace = true }
